# ollama_td

./: .gitignore  Cargo.toml  README.md
examples/: linux.rs  unix.rs  windows.rs
src/: download.rs  lib.rs  util.rs
tests/: test.rs
