[package]
name = "ollama_td"
version = "0.2.0"
edition = "2021"
authors = ["Allawiii <alighraibeh87@gmail.com>"]
license = "MIT"
description = "ollama cli tool downloader"
[dependencies]
octocrab = "0.43.0"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
sys-info = "0.9.1"                                           # to get the os kernel type {linux ,Windows ,Darwin}
# regex = "1.11.1"
futures-util = "0.3.31"
bytes = "1.10.0"
